# golf-sim

./: CONTOUR_PLAN.md  README.md  ideas.txt  label-studio-acc-token.txt  requirements.txt
configs/: golf_ball_dataset.yaml
cpp/: CMakeLists.txt
cpp/include/: frame_pipeline.h  putt_stats.h  stats_api.h  tracker.h  trt_engine.h  unreal_sender.h
cpp/src/: frame_pipeline.cpp  main.cpp  putt_stats.cpp  stats_api.cpp  tracker.cpp  trt_engine.cpp  unreal_sender.cpp
data/labels/: train.cache  val.cache
data/labels/train/: frame_000001.txt  frame_000002.txt  frame_000003.txt  frame_000004.txt  frame_000005.txt  frame_000006.txt  frame_000007.txt  frame_000008.txt  frame_000009.txt  frame_000010.txt  frame_000011.txt  frame_000012.txt  frame_000013.txt  frame_000014.txt  frame_000015.txt  frame_000036.txt  frame_000037.txt  frame_000038.txt  frame_000039.txt  frame_000040.txt  frame_000061.txt  frame_000062.txt  frame_000063.txt  frame_000064.txt  frame_000065.txt  frame_000076.txt  frame_000077.txt  frame_000078.txt  frame_000079.txt  frame_000080.txt  frame_000086.txt  frame_000087.txt  frame_000088.txt  frame_000089.txt  frame_000090.txt  frame_000096.txt
data/labels/val/: frame_000016.txt  frame_000017.txt  frame_000018.txt  frame_000019.txt  frame_000020.txt  frame_000021.txt  frame_000022.txt  frame_000023.txt  frame_000024.txt  frame_000026.txt  frame_000027.txt  frame_000028.txt  frame_000029.txt  frame_000030.txt  frame_000031.txt  frame_000032.txt  frame_000033.txt  frame_000034.txt  frame_000035.txt  frame_000045.txt  frame_000046.txt  frame_000047.txt  frame_000051.txt  frame_000052.txt  frame_000053.txt  frame_000054.txt  frame_000055.txt  frame_000056.txt  frame_000057.txt  frame_000058.txt  frame_000059.txt  frame_000060.txt  frame_000066.txt  frame_000067.txt  frame_000068.txt  frame_000069.txt  frame_000070.txt  frame_000071.txt  frame_000072.txt  frame_000081.txt  (+3 more)
python/: =4.12.0  auto_label.py  cookies.txt  detect_golf_ball.py  import_to_label_studio.py  split_dataset.py
python/runs/detect/runs/train/golf_ball_detector/: args.yaml  results.csv
scripts/: capture_frames.sh  clear_training_data.sh  convert_onnx_to_trt.sh
(+3 files in other folders)
